<resources>
    <string name="app_name">DBDMarket</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appTitleString">DBD Market</string>
    <string name="appDescriptionString">Welcome to the online store\ndedicated to the game\nDead by Daylight</string>
    <string name="appStartButtonString">Start</string>
    <string name="appHelperDescriptionString">If you already have an account, then click \"Sign In\",\nif you are here for the first time, then click \"Sign Up\".</string>
    <string name="appSignInButtonString">Sign In</string>
    <string name="appSignUpButtonString">Sign Up</string>
    <string name="or">Or</string>
    <string name="loginTitleString">Login</string>
    <string name="emailLoginRegisterEditTextHint">Email</string>
    <string name="passwordLoginRegisterEditTextHint">Password</string>
    <string name="forgotPasswordString">Forgot password</string>
    <string name="helperRegisterString">Don\'t have an account?</string>
    <string name="registerLinkString">Register now</string>
    <string name="appLoginButtonString">Login</string>
    <string name="registerTitleString">Register</string>
    <string name="helperLoginString">Do you have an account?</string>
    <string name="loginLinkString">Log in now</string>
    <string name="appRegisterButtonString">Register</string>
    <string name="lastNameLoginRegisterEditTextHint">Last name</string>
    <string name="firstNameLoginRegisterEditTextHint">First name</string>
    <string name="resetPasswordTitleDialogTextViewString">Reset password</string>
    <string name="resetPasswordDescriptionDialogTextViewString">Please enter your account email so we can send you a password reset link to this email</string>
    <string name="resetPasswordEditTextHint">Enter your email</string>
    <string name="appCancelResetPasswordButtonTextString">Cancel</string>
    <string name="appSendResetPasswordButtonTextString">Send</string>
    <string name="successResetPasswordToastMessageString">A password reset link has been sent to your email</string>
    <string name="homeIconBottomNavigationMenuString">Home fragment</string>
    <string name="cartIconBottomNavigationMenuString">Cart fragment</string>
    <string name="searchIconBottomNavigationMenuString">Search fragment</string>
    <string name="userIconBottomNavigationMenuString">User fragment</string>
    <string name="searchProductsHomeHeaderText">Search products…</string>
    <string name="mainCategoryTabLayoutTitleString">Main</string>
    <string name="suitsCategoryTabLayoutTitleString">Suits</string>
    <string name="weaponCategoryTabLayoutTitleString">Weapon</string>
    <string name="headdressCategoryTabLayoutTitleString">Headdress</string>
    <string name="torsoCategoryTabLayoutTitleString">Torso</string>
    <string name="legsCategoryTabLayoutTitleString">Legs</string>
    <string name="appSpecialProductButtonTextString">Add to cart</string>
    <string name="appSpecialProductTitleTextView">Special products</string>
    <string name="appBeneficialProductTitleTextView">Beneficial products</string>
    <string name="appMightBeInterestingProductTitleTextView">Might be interesting…</string>
    <string name="productsAdderTitleTextViewString">Add a new product to Firebase Firestore</string>
    <string name="productsAdderNameTextViewString">The product\'s name</string>
    <string name="productsAdderCategoriesTextViewString">The product\'s category(Special products, Beneficial products, Interesting products, Suits, Headdress, Torso, Weapon, Legs)</string>
    <string name="productsAdderDescriptionTextViewString">The product\'s description</string>
    <string name="productsAdderPriceTextViewString">The product\'s price(in \'$\')</string>
    <string name="productsAdderDiscountTextViewString">The product\'s discount(optional, ex: 0.20)</string>
    <string name="productsAdderSizeTextViewString">The product\'s size(can be several sizes, ex: L,XL,XXL)</string>
    <string name="productsAdderSelectedImagesCountTextViewString">Images selected:</string>
    <string name="productsAdderAddImagesButtonTextString">Add products images</string>
    <string name="productsAdderDeleteAllImagesButtonTextString">Delete all products images</string>
    <string name="productsAdderToolbarIconTitleString">Add product</string>
    <string name="productsAdderToolbarTitleString">Products adder helper</string>
    <string name="customAlertDialogCancelButtonTextString">Cancel</string>
    <string name="customAlertDialogApplyButtonTextString">Apply</string>
    <string name="appBeneficialProductButtonTextString">Go to product</string>
    <string name="specialProductsListIsEmptyError">Special products list is empty</string>
    <string name="beneficialProductsListIsEmptyError">Beneficial products list is empty</string>
    <string name="interestingProductsListIsEmptyError">Interesting products list is empty</string>
    <string name="appInterestingProductButtonTextString">Go to product</string>
    <string name="appProfitablePropositionProductTitleTextView">Profitable proposition</string>
    <string name="appOtherProductTitleTextView">Other</string>
    <string name="productDescriptionSizesTextViewWarningString">Please select a size for this product !</string>
    <string name="productDescriptionAddToCartButtonString">Add to cart</string>
    <string name="productDescriptionSizesTitleString">Sizes:</string>
    <string name="productDescriptionSuccessfullyAddedToTheCartString">You have successfully added this product to your cart</string>
    <string name="productDescriptionPleaseChooseSizeString">Please choose the size for the product first</string>
    <string name="cartScreenProductListTitleString">Cart products list</string>
    <string name="totalPriceTextViewString">Total price:</string>
    <string name="cartScreenNextButtonTextString">Next</string>
    <string name="emptyCartTextViewString">Your cart list is empty</string>
    <string name="successfullyDeletedCartProductString">You have successfully deleted this cart product from your cart</string>
    <string name="setupOrderScreenTitleString">Setup order</string>
    <string name="addressesTitleTextViewString">Addresses:</string>
    <string name="chooseAddressWarningTextViewString">Please choose address for order</string>
    <string name="setupOrderButtonString">Setup order</string>
    <string name="setupOrderCartProductQuantityTitleString">Quantity:</string>
    <string name="addingAddressTitleTextViewString">Adding an address</string>
    <string name="firstNameAddressEditTextHintString">FirstName</string>
    <string name="lastNameAddressEditTextHintString">LastName</string>
    <string name="countryAddressEditTextHintString">Country</string>
    <string name="cityAddressEditTextHintString">City</string>
    <string name="streetAddressEditTextHintString">Street</string>
    <string name="typeAddressEditTextHintString">Type (For example: Work)</string>
    <string name="phoneNumberAddressEditTextHintString">Phone number</string>
    <string name="addAddressButtonTextString">Add address</string>
    <string name="successfullyAddedAddressString">You have successfully added the address</string>
    <string name="successfullyDeletedAddressString">You have successfully deleted the address</string>
    <string name="closeBottomSheetDialogButtonTextString">Close</string>
    <string name="deletingAddressAlertDialogTitleString">Deleting address</string>
    <string name="deletingAddressAlertDialogMessageString">Are you sure you want to delete this address ?</string>
    <string name="completeOrderTitleTextViewString">Order is completed</string>
    <string name="completeOrderIdTitleTextViewString">Your order id is: #</string>
    <string name="completeOrderPathTitleTextViewString">To track your order follow the path:</string>
    <string name="completeOrderPathTextViewString"><![CDATA[Profile -> All orders]]></string>
    <string name="orderDetailButtonTextString">Order detail</string>
    <string name="setupOrderLoadingTextViewDeletingCartProductsString">Deleting cart products...</string>
    <string name="setupOrderLoadingTextViewAddingOrderToCollectionString">Adding order to collection...</string>
    <string name="initialLoadingTextViewStateString">Loading</string>
    <string name="firstLoadingTextViewStateString">Loading.</string>
    <string name="secondLoadingTextViewStateString">Loading..</string>
    <string name="thirdLoadingTextViewStateString">Loading...</string>
    <string name="ordersTitleTextViewString">Your orders</string>
    <string name="ordersEmptyTextViewString">Your orders list is empty</string>
    <string name="ordersIdTitleTextViewString">Order:&#160;#</string>
    <string name="orderDateTitleTextViewString">Date:&#160;</string>
    <string name="orderDetailAddressTitleTextViewString">Address</string>
    <string name="orderDetailAddressCountryTextViewString">Country:&#160;</string>
    <string name="orderDetailAddressCityTextViewString">City:&#160;</string>
    <string name="orderDetailAddressStreetTextViewString">Street:&#160;</string>
    <string name="orderDetailAddressFirstNameTextViewString">First Name:&#160;</string>
    <string name="orderDetailAddressLastNameTextViewString">Last Name:&#160;</string>
    <string name="orderDetailAddressPhoneNumberTextViewString">Phone number:&#160;</string>
    <string name="orderDetailAmountTextViewString">Amount:&#160;</string>
    <string name="orderDetailProductTitleTextViewString">Product</string>
    <string name="orderDetailProductsTitleTextViewString">Products</string>
    <string name="userAvatarsTitleTextViewString">Your avatars</string>
    <string name="userAvatarsEmptyTextViewString">Your avatars list is empty</string>
    <string name="userAvatarsTextViewString">Avatars</string>
    <string name="userAllOrdersTextViewString">All orders</string>
    <string name="userRecentOrderTextViewString">Recent order</string>
    <string name="userAllAddressesTextViewString">All addresses</string>
    <string name="userLanguageTextViewString">Language</string>
    <string name="userResetPasswordTextViewString">Reset password</string>
    <string name="userExitLinearLayoutTextString">Exit</string>
    <string name="addressesTitleTextViewText">Your addresses</string>
    <string name="addressesEmptyTextViewString">Your addresses list is empty</string>
    <string name="unitedStatesTextViewString">United States</string>
    <string name="UkrainianTextViewString">Українська</string>
    <string name="changeLanguageAlertDialogTitleString">Changing the application language</string>
    <string name="userLogoutTitleAlertDialogString">Signing out of a user account</string>
    <string name="userLogoutMessageAlertDialogString">Are you sure you want to log out of your user account ?</string>
    <string name="userAvatarAlertDialogTitleString">Changing user avatar</string>
    <string name="userAvatarAlertDialogMessageString">Are you sure you want to change your current user avatar to this one ?</string>
    <string name="userAvatarSuccessfullyUpdatedString">You have successfully updated your user avatar</string>
    <string name="homeHeaderTextViewString">Products</string>
    <string name="headerSearchEditTextQueryHint">Product search…</string>
    <string name="noProductsFoundTextViewString">No products found with this name</string>
    <string name="deviceDoesNotSupportVoiceInput">Sorry, but your device does not support voice input</string>
</resources>