<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/homeIconBottomNavigationMenuString"
        app:showAsAction="always"/>

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart_icon"
        android:title="@string/cartIconBottomNavigationMenuString"
        app:showAsAction="always"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/searchIconBottomNavigationMenuString"
        app:showAsAction="always"/>

    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/ic_user_icon"
        android:title="@string/userIconBottomNavigationMenuString"
        app:showAsAction="always"/>

</menu>