<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resetPasswordViewGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="@dimen/cardViewDialogElevation"
        app:cardCornerRadius="@dimen/cardViewDialogCornerRadius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_custom_background">

            <TextView
                android:id="@+id/resetPasswordTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appDialogViewsMarginTop"
                android:fontFamily="@font/app_description_font"
                android:text="@string/resetPasswordTitleDialogTextViewString"
                android:textColor="@color/white"
                android:textSize="@dimen/appResetPasswordTitleDialogTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/resetPasswordDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appDialogViewsMarginTop"
                android:fontFamily="@font/app_buttons_font"
                android:text="@string/resetPasswordDescriptionDialogTextViewString"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/appResetPasswordDescriptionDialogTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetPasswordTitleTextView" />

            <EditText
                android:id="@+id/dialogResetPasswordViaEmailEditText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/login_register_edit_text_background"
                android:drawableStart="@drawable/login_register_email_icon_edit_text_selector"
                android:drawablePadding="@dimen/loginRegisterEditTextDrawablePadding"
                android:fontFamily="@font/app_description_font"
                android:hint="@string/resetPasswordEditTextHint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/loginRegisterEditTextPaddingStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/appResetPasswordEditTextBottomHorizontalGuideline"
                app:layout_constraintEnd_toEndOf="@+id/appResetPasswordEditTextRightVerticalGuideline"
                app:layout_constraintStart_toStartOf="@+id/appResetPasswordEditTextLeftVerticalGuideline"
                app:layout_constraintTop_toTopOf="@+id/appResetPasswordEditTextTopHorizontalGuideline" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/appDialogButtonsMarginVertical"
                android:gravity="center"
                android:paddingHorizontal="@dimen/appCancelSendDialogButtonsLinearLayoutPaddingHorizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/appResetPasswordEditTextRightVerticalGuideline"
                app:layout_constraintStart_toStartOf="@+id/appResetPasswordEditTextLeftVerticalGuideline"
                app:layout_constraintTop_toBottomOf="@+id/dialogResetPasswordViaEmailEditText">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appCancelResetPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/appCancelResetPasswordButtonTextString"
                    android:textSize="@dimen/appCancelSendButtonsDialogTextSize"
                    android:textStyle="italic"
                    android:background="@drawable/app_cancel_dialog_button_background"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="@dimen/horizontalSpaceBetweenCancelAndSendDialogButtons"
                    android:layout_height="0dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appSendResetPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/appSendResetPasswordButtonTextString"
                    android:textSize="@dimen/appCancelSendButtonsDialogTextSize"
                    android:textStyle="italic"
                    android:background="@drawable/app_send_dialog_button_background"
                    android:textAllCaps="false" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/appResetPasswordEditTextLeftVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.10" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/appResetPasswordEditTextRightVerticalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/appResetPasswordEditTextTopHorizontalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/appResetPasswordEditTextBottomHorizontalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>